syntax = "proto3";// Make sure to have proto3 for your proto files.
// generate separate or multiple java file for each generated class.
option java_multiple_files = true;
// Package inside the src/main/java where generated classes will reside.
option java_package = "smart.medical.intelligentArchivingService";
// Class name of the wrapper class which represent this file.
option java_outer_classname = "intelligentArchivingServiceImpl";

package smart;

 service IntelligentArchivingService {
 //Client Streaming
 rpc healthProfile (stream HealthInfoRequest) returns (ProfileNoReply) {}

 //Unary
 //rpc responsibleDoctorInfo (DoctorRequest) returns (DoctorReply) {}

 }

 message HealthInfoRequest{
	string info = 1;
	string name = 2;
	string gender = 3;
	string diagnose = 4;

}
message ProfileNoReply{
	string message = 1;
}
